# mlibtool

./: Makefile  README  README.md  mlibtool.c
autotools-template/: Makefile.am  configure.ac  mlibtool.c  test.c
autotools-template/scripts/: mlibtool.m4
